# video-to-faces

./: .gitignore  LICENSE  README.md  app.py  demo.ipynb  iniciar.sh  instalacion.sh  requirements.txt  setup.cfg  setup.py  video_to_faces.py
images/src/: Illustration.xcf  info.txt
models/: iresnet.py  mobilefacenet.py  mobilenet.py  mtcnn.py
src/: dupes.py
src/videotofaces/: __init__.py  __main__.py  detection.py  dupes.py  grouping.py  main.py  prep.py  validation.py
src/videotofaces/backbones/: basic.py  mobilenet.py  resnet.py
src/videotofaces/detectors/: __init__.py  coord_reg.py  main.py  mtcnn.py  rcnn.py  retina.py  retinaface.py  ssd.py  yolo.py  yolo3.py
src/videotofaces/detectors/components/: fpn.py
src/videotofaces/detectors/data/: coco.py  loader.py  parser.py
src/videotofaces/detectors/operations/: anchor.py  bbox.py  coco.py  loss.py  post.py  prep.py  roi.py
src/videotofaces/detectors/shared/: bbox.py  prep.py
src/videotofaces/encoders/: __init__.py  facenet.py  inception_resnet.py  iresnet.py  mobilefacenet.py  mobilenet.py  vit.py
src/videotofaces/evaluation/det/: calculator.py  (+5 more)
src/videotofaces/models/: __init__.py  inception_resnet.py  mobilefacenet.py  mobilenet.py  mtcnn.py  vit.py  yolo.py
src/videotofaces/utils/: __init__.py  align.py  bbox.py  download.py  eval_det.py  gallery.py  image.py  pbar.py  weights.py
tests/: common.py  test_facenet.py  test_landmarker.py  test_mtcnn.py  test_rcnn.py  test_retina.py  test_retinaface.py  test_ssd.py  test_vit.py  test_yolo.py  test_yolov3.py
utils/: align.py  download.py
(+1 files in other folders)
