[metadata]
name = videotofaces
version = 0.0.1
license = MIT
description = A library for extracting and grouping faces from videos using a variety of face detection / recognition models
long_description = file: README.rst
author = nsndp
author_email = zagumennov.da@gmail.com
classifiers=

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =

[options.packages.find]
where=src