[metadata]
name = videotofaces
version = 0.0.2
license = MIT
description = A library for extracting faces from videos and grouping them by person using a variety of face detection/recognition models
long_description = file: README.rst
author = nsndp
author_email = zagumennov.da@gmail.com

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    opencv-python
    numpy
    requests
    torch

[options.packages.find]
where=src